--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
     <title>Ristorante Con Fusion</title>
@@ -26,10 +28,10 @@
             <a class="navbar-brand" href="#">Ristorante confusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                <ul class="navbar-nav">
-                   <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                   <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
-                   <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                   <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                   <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                   <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>About</a></li>
+                   <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                   <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                        
                </ul>
             </div>
@@ -106,19 +108,19 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              <span class="fa fa-phone fa-lg"></span> Tel.: +852 1234 5678<br>
+		              <span class="fa fa-fax fa-lg"></span> Fax: +852 8765 4321<br>
+		              <span class="fa fa-envelope fa-lg"></span> Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
                 <div class="col col-sm-4 align-self-center ">
                     <div style="text-align:center">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><span class="fa fa-google-plus"></span></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><span class="fa fa-facebook"></span></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><span class="fa fa-linkedin"></span></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><span class="fa fa-twitter"></span></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><span class="fa fa-youtube"></span></a>
+                        <a class="btn btn-social-icon btn-envelope-o" href="mailto:"><span class="fa fa-envelope-o"></span></a>
                     </div>
                 </div>
            </div>
