--- a/contactus.html
+++ b/contactus.html
@@ -42,7 +42,9 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col col-sm align-self-center ">
+                    <img src="img/logo.png" class="image-fluid">
+
                 </div>
             </div>
         </div>
